# amplifier-app-actions

./: .gitignore  README.md  SECURITY.md  SUPPORT.md  action.yml  bundle.md  main.py  pyproject.toml
.amplifier/digital-twin-universe/fixtures/: multi-repo-triage-recipe.yaml  triage-recipe.yaml  triage.dot
.amplifier/digital-twin-universe/profiles/: repro-routing-matrix-3.yaml  triage-sandbox.yaml  validate-attractor.yaml  validate-multi-repo.yaml  validate-prompt.yaml  validate-recipe.yaml
agents/: app-actions-expert.md  dot-setup-expert.md
amplifier_app_actions/: __init__.py  cli.py  events.py  instruction.py  session_factory.py  wrapper.py
amplifier_app_actions/context/: reproduction.md
amplifier_app_actions/tools/: __init__.py  github_add_label.py  launch_dtu.py
amplifier_app_actions/tools/github_add_label/: __init__.py
amplifier_app_actions/tools/github_checkout_repo/: __init__.py
amplifier_app_actions/tools/github_checkout_repo/amplifier_module_tool_github_checkout_repo/: __init__.py
amplifier_app_actions/tools/github_post_comment/: __init__.py
amplifier_app_actions/tools/github_post_comment/amplifier_module_tool_github_post_comment/: __init__.py
amplifier_app_actions/tools/launch_dtu/: __init__.py
amplifier_app_actions/tools/launch_dtu/amplifier_module_tool_launch_dtu/: __init__.py
bundles/: app-actions.bundle.md  attractor-pipeline.bundle.md  github-tools-amplifier-dev.bundle.md  github-tools-dtu.bundle.md  github-tools.bundle.md  triage-amplifier.bundle.md  triage-repro.bundle.md  triage-safe.bundle.md
context/: app-actions-awareness.md  dot-setup-awareness.md
docs/: recipe-variables.md
docs/designs/: 2026-05-17-amplifier-bundle-dev-support.md
docs/examples/: investigate-workflow.yml  issue-triage-workflow.yml  pr-review-workflow.yml
tests/: conftest.py  test_bundles.py  test_cli.py  test_dtu_profiles.py  test_events.py  test_github_add_label.py  test_github_checkout_repo.py  test_github_post_comment.py  test_instruction.py  test_launch_dtu.py  test_main.py  test_security.py  test_session_factory.py  test_tool_package_structure.py  test_wrapper.py
