[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-app-actions"
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "amplifier-foundation",
    "httpx>=0.27",
]

[project.scripts]
amplifier-triage = "amplifier_app_actions.cli:main"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-foundation = { git = "https://github.com/microsoft/amplifier-foundation", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["amplifier_app_actions"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
