[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-app-actions"
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "amplifier-foundation",
    "amplifier-app-cli",
    "httpx>=0.27",
]

[project.scripts]
amplifier-triage = "amplifier_app_actions.cli:main"

[project.entry-points."amplifier.modules"]
tool-github-post-comment  = "amplifier_app_actions.tools.github_post_comment:mount"
tool-github-add-label     = "amplifier_app_actions.tools.github_add_label:mount"
tool-github-checkout-repo = "amplifier_app_actions.tools.github_checkout_repo:mount"
tool-launch-dtu           = "amplifier_app_actions.tools.launch_dtu:mount"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-foundation = { git = "https://github.com/microsoft/amplifier-foundation", branch = "main" }
amplifier-app-cli = { git = "https://github.com/microsoft/amplifier-app-cli", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["amplifier_app_actions"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
